--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^40.0.0",
+    "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^5.14.13",
+    "axios": "^1.5.1",
+    "ckeditor-tailwind-reset": "^1.0.5",
+    "html-react-parser": "^4.2.9",
+    "i": "^0.3.7",
     "jsqr": "^1.4.0",
+    "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
