--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^5.14.13",
+    "@mui/x-date-pickers": "^6.17.0",
+    "@mui/x-date-pickers-pro": "^6.17.0",
     "axios": "^1.5.1",
     "ckeditor-tailwind-reset": "^1.0.5",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "html-react-parser": "^4.2.9",
-    "i": "^0.3.7",
     "jsqr": "^1.4.0",
-    "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
