--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,11 @@
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fullcalendar/core": "^6.1.9",
+    "@fullcalendar/daygrid": "^6.1.9",
+    "@fullcalendar/interaction": "^6.1.9",
+    "@fullcalendar/react": "^6.1.9",
+    "@fullcalendar/timegrid": "^6.1.9",
     "@headlessui/react": "^1.7.17",
     "@mui/material": "^5.14.13",
     "@mui/x-date-pickers": "^6.17.0",
@@ -26,6 +31,7 @@
     "jsqr": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
