--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,12 +23,14 @@
     "@mui/material": "^5.14.13",
     "@mui/x-date-pickers": "^6.17.0",
     "@mui/x-date-pickers-pro": "^6.17.0",
+    "antd": "^5.11.4",
     "axios": "^1.5.1",
     "ckeditor-tailwind-reset": "^1.0.5",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.10",
     "html-react-parser": "^4.2.9",
     "jsqr": "^1.4.0",
+    "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
