--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,9 +20,12 @@
     "@fullcalendar/react": "^6.1.9",
     "@fullcalendar/timegrid": "^6.1.9",
     "@headlessui/react": "^1.7.17",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.14.13",
     "@mui/x-date-pickers": "^6.17.0",
     "@mui/x-date-pickers-pro": "^6.17.0",
+    "@paypal/react-paypal-js": "^8.1.3",
     "antd": "^5.11.4",
     "axios": "^1.5.1",
     "ckeditor-tailwind-reset": "^1.0.5",
@@ -30,6 +33,7 @@
     "dayjs": "^1.11.10",
     "html-react-parser": "^4.2.9",
     "jsqr": "^1.4.0",
+    "lightbox.js-react": "^0.9.6",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
