--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,12 +34,15 @@
     "html-react-parser": "^4.2.9",
     "jsqr": "^1.4.0",
     "lightbox.js-react": "^0.9.6",
+    "luxon": "^3.4.4",
+    "moment": "^2.29.4",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-image-crop": "^10.1.8",
     "react-router-dom": "^6.16.0",
