--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@mui/icons-material": "^5.14.19",
     "@mui/joy": "^5.0.0-beta.16",
     "@mui/material": "^5.14.13",
+    "@mui/x-charts": "^6.18.3",
     "@mui/x-date-pickers": "^6.17.0",
     "@mui/x-date-pickers-pro": "^6.17.0",
     "@paypal/react-paypal-js": "^8.1.3",
