--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "@ant-design/pro-components": "^2.6.43",
     "@ckeditor/ckeditor5-build-classic": "^40.0.0",
     "@ckeditor/ckeditor5-react": "^6.1.0",
     "@emotion/react": "^11.11.1",
@@ -27,7 +29,7 @@
     "@mui/x-date-pickers": "^6.17.0",
     "@mui/x-date-pickers-pro": "^6.17.0",
     "@paypal/react-paypal-js": "^8.1.3",
-    "antd": "^5.11.4",
+    "antd": "^5.12.4",
     "axios": "^1.5.1",
     "ckeditor-tailwind-reset": "^1.0.5",
     "date-fns": "^2.30.0",
@@ -42,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-helmet-async": "^1.3.0",
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -65,7 +68,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.31",
+    "record": "^0.2.0",
     "tailwindcss": "^3.3.3",
+    "toast": "^0.5.4",
     "typescript": "^5.2.2",
     "vite": "^4.4.5"
   }
