--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "jsqr": "^1.4.0",
     "lightbox.js-react": "^0.9.6",
     "luxon": "^3.4.4",
+    "mapbox-gl": "^3.0.1",
     "moment": "^2.29.4",
     "nanoid": "^5.0.3",
     "react": "^18.2.0",
